feat: implement absences
